--- a/src/app/components/destinations/destinations.component.html
+++ b/src/app/components/destinations/destinations.component.html
@@ -14,8 +14,8 @@
             <div class="destination-content">
               <h3>{{ destination.name }}</h3>
               <p>{{ destination.description }}</p>
-              <a [routerLink]="'/destination/' + destination.slug" class="btn-explore">
-                Explore {{ destination.name.split(',')[0] }} 
+              <a *ngIf="destination.id" [routerLink]="['/destination', destination.id]" class="btn-explore">
+                Explore {{ destination.name.split(',')[0] }}  
                 <i class="fas fa-arrow-right"></i>
               </a>
             </div>
