fixed destination page

--- a/src/app/components/chat-widget/chat-widget.component.html
+++ b/src/app/components/chat-widget/chat-widget.component.html
@@ -5,7 +5,7 @@
     <div class="chat-box" [ngClass]="{'active': isChatOpen}">
       <div class="chat-header">
         <h4>Chat with Us</h4>
-        <i class="fas fa-times" (click)="toggleChat()"></i>
+        <button (click)="toggleChat()"><i class="fas fa-times" ></i></button>
       </div>
       <div class="chat-body">
         <p>Hello! How can our Kolkata team assist with your travel plans today?</p>
