--- a/src/app/common/header/header.component.html
+++ b/src/app/common/header/header.component.html
@@ -16,7 +16,13 @@
           <a href="javascript:void(0)" (click)="toggleDropdown($event)">{{ group.label }}</a>
           <ul class="dropdown-content-nav">
             <li *ngFor="let item of group.items">
-              <a [routerLink]="item.route">{{ item.name }}</a>
+                <a
+      [routerLink]="item.route"
+      [queryParams]="item.queryParams"
+      (click)="toggleMobileMenu()"
+    >
+      {{ item.name }}
+    </a>
             </li>
           </ul>
         </li>
