--- a/src/app/components/chat-widget/chat-widget.component.scss
+++ b/src/app/components/chat-widget/chat-widget.component.scss
@@ -16,7 +16,7 @@
     cursor: pointer;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
     transition: all 0.3s ease;
-  
+   
     i {
       font-size: 1.8rem;
       color: var(--white);
@@ -59,7 +59,14 @@
       color: var(--white);
       margin: 0;
     }
-  
+  button{
+      background: transparent;
+    
+      border: none;
+      cursor: pointer;
+      font-size: 1.5rem;
+      transition: color 0.3s ease;
+   }
     i {
       color: var(--white);
       cursor: pointer;
